--- a/src/OhioBox.TestRunner/OhioBox.TestRunner.csproj
+++ b/src/OhioBox.TestRunner/OhioBox.TestRunner.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<TargetFramework>netcoreapp2.1</TargetFramework>
+		<PackAsTool>true</PackAsTool>
 		<AssemblyName>dotnet-testrunner</AssemblyName>
 		<PackageId>OhioBox.TestRunner</PackageId>
 		<BuildNumber>0</BuildNumber>
